--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,11 @@ jobs:
       with:
         go-version: '1.23.3'
 
+    - name: Change directory
+      run: cd backend
+
     - name: Build
-      run: go build -v ./backend/...
+      run: go build -v ./...
 
     - name: Test
-      run: go test -v ./backend/...
+      run: go test -v ./...
