try changing directory inline

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,11 +21,8 @@ jobs:
       with:
         go-version: '1.23.3'
 
-    - name: Change directory
-      run: cd backend
-
     - name: Build
-      run: go build -v ./...
+      run: cd backend && go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: cd backend && go test -v ./...
