--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-      "start": "node src/index.js"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
