--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "@apollo/gateway": "^2.9.3",
     "@apollo/server": "^4.11.2",
-    "graphql": "^16.10.0"
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "express4": "link:@apollo/server/express4",
+    "graphql": "^16.10.0",
+    "http": "0.0.1-security"
   }
 }
