--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "@apollo/gateway": "^2.9.3",
     "@apollo/server": "^4.11.2",
+    "apollo-server-express": "^3.13.0",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express4": "link:@apollo/server/express4",
     "graphql": "^16.10.0",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "node-fetch": "^3.3.2"
   }
 }
