--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.formatOnSave": true,
     "[javascript]": {
         "editor.formatOnSave": false
-    }
+    },
+    "sqltools.useNodeRuntime": true
 }
