--- a/backend/.air.toml
+++ b/backend/.air.toml
@@ -13,7 +13,7 @@ bin = "tmp/main"
 # Customize binary, can setup environment variables when run your app.
 full_bin = "APP_ENV=dev APP_USER=air ./tmp/main"
 # Add additional arguments when running binary (bin/full_bin). Will run './tmp/main hello world'.
-args_bin = ["hello", "world"]
+args_bin = []
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html", "css"]
 # Ignore these filename extensions or directories.
